# schemainspect

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
schemainspect/: __init__.py  command.py  get.py  inspected.py  inspector.py  misc.py  tableformat.py
schemainspect/graphlib/: __init__.py
schemainspect/pg/: __init__.py  comments.sql  constraints.sql  deps.sql  enums.sql  extensions.sql  functions.sql  grants.sql  indexes.sql  obj.py  relations.sql  schemas.sql  sequences.sql  things.sql  triggers.sql  types.sql
schemainspect/pg/sql/: agg_functions.sql  collations.sql  collations9.sql  comments.sql  constraints.sql  deps.sql  domains.sql  enums.sql  functions.sql  identities.sql  indexes.sql  memberships.sql  privileges.sql  relations.sql  relations9.sql  rlspolicies.sql  roles.sql  schemas.sql  sequences.sql  things.sql  triggers.sql  types.sql
schemainspect/rs/: __init__.py  obj.py
schemainspect/rs/sql/: constraints.sql  deps.sql  functions.sql  indexes.sql  relations.sql
tests/: common.py  conftest.py  test_all.py  test_collations.py  test_deps.py  test_deps_fk.py  test_excludemultipleschemas.py  test_excludeschema.py  test_exclusion.py  test_funcs.py  test_indexes.py  test_inheritance.py  test_multipleschema.py  test_multipleschemas.py  test_partitioning.py  test_privileges.py  test_repr.py  test_rls.py  test_schemainspect.py  test_singleschema.py  test_triggers.py  test_types.py
tests/pgxn/: dummycolor--0.0.1.sql  dummycolor.control
