[tool.poetry]
name = "schemainspect"
version = "3.1"
authors = [ "Robert Lechte <robertlechte@gmail.com>",]
license = "Unlicense"
readme = "README.md"
description = "Schema inspection for PostgreSQL (and possibly others)"

repository = "https://github.com/djrobstep/schemainspect"
homepage = "https://github.com/djrobstep/schemainspect"

[tool.poetry.dependencies]
python = ">=3.7,<4"
six = "*"
sqlalchemy = "*"

[tool.poetry.dev-dependencies]
sqlbag = ">=0.1.1616028516"
pytest = "*"
pytest-cov = "*"
pytest-clarity = "*"
psycopg2-binary = "*"
flake8 = "*"
isort = "*"
migra = "*"
black = "*"

[tool.poetry.scripts]
schemainspect = 'schemainspect:do_command'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88
