[tool.poetry]
name = "schemainspect"
version = "3.1"
authors = ["Robert Lechte <robertlechte@gmail.com>"]
license = "Unlicense"
readme = "README.md"
description = "Schema inspection for PostgreSQL (and possibly others)"

repository = "https://github.com/djrobstep/schemainspect"
homepage = "https://github.com/djrobstep/schemainspect"

[tool.poetry.dependencies]
python = ">=3.7,<4"
sqlalchemy = "*"

[tool.poetry.dev-dependencies]
sqlbag = ">=0.1.1616028516"
pytest = "*"
pytest-cov = "*"
pytest-clarity = "*"
psycopg2-binary = "*"
flake8 = "*"
isort = "5.10.1"
migra = "*"
black = "22.3.0"
toml = "*"
pre-commit = "*"

[tool.poetry.scripts]
schemainspect = 'schemainspect:do_command'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
